2.0 (09.09.2015 14:26)
	move to keygenmusic.tk
1.1.1 (16.03.2015 12:10)
	Fix Ukrainian locale
	Loop playlist 
1.1 (20.12.2014 12:41)
	Total played statistics on hover ext icon (when music stopped)
1.0 (09.12.2014 23:07)
	Check playlist every 7 days
0.1 (09.12.2014 14:35)
	First release