@@ -4,7 +4,9 @@
 Это расширение просто проигрывает музыку с keygenmusic.tk (большой коллекции 8-битной музыки).
 Весь контент абсолютно бесплатен и легален. Посети keygenmusic.tk чтоб получить больше информации.
 
-Подсказка: задержи курсор на иконке расширения, когда музыка остановлена. Во всплывающей подсказке будет показано
+Подсказка:
+-
+- Задержи курсор на иконке расширения, когда музыка остановлена. Во всплывающей подсказке будет показано
 общее время воспроизведения. Эта функция доступна с версии 1.1, потому у расширения нет инфы о продолжительности воспроизвдения
 до этого апдейта.
 
