@@ -1,12 +1,14 @@
 Chromium (Chrome and Opera released) and FireFox Extension for playing awesome chiptune from keygenmusic.tk
 --------------------------------------------------------------------------------------------------
 
-**Just click button to play chiptune from [keygenmusic.tk] (http://keygenmusic.tk/)**
+**Just click button to play chiptune from [keygenmusic.tk](http://keygenmusic.tk/)**
 
 It plays mp3 version (not tracker) from mp3 mirror.
 
 
 Used [Chrome Extension Box](https://github.com/onikienko/chrome-extensions-box) for Chrome release building.
+
+Install for your browser:
 
 - **[Chrome](https://chrome.google.com/webstore/detail/keygenjukebox-play-button/olephdnjkkjiidgifanfiimkbbcaogid)**
 - **[Opera](https://addons.opera.com/extensions/details/keygenjukebox-play-button/)**
