@@ -1,3 +1,5 @@
+	Next song on double-click on icon
+	Check playlist only on icon click
 2.0 (09.09.2015 14:26)
 	move to keygenmusic.tk
 1.1.1 (16.03.2015 12:10)
